fix footer note only appear at the bottom of page

--- a/client/src/components/footer/footer.styles.scss
+++ b/client/src/components/footer/footer.styles.scss
@@ -1,7 +1,5 @@
 .footer{
-    position: fixed;
-    left: 40%;
-    bottom: 0;
+    margin-left: 40%;
     color: #0d0d00;
     text-decoration: none;    
     opacity: 0.5;  
