--- a/client/src/components/search/search.styles.scss
+++ b/client/src/components/search/search.styles.scss
@@ -7,6 +7,7 @@
     }
 
     .search-box{
+        background-color: #e6e6e6;
         padding: 0;
         width: 100%;
         border: none;
@@ -14,6 +15,7 @@
         font-size: 1em;
         letter-spacing: .05em;
         transition: .5s;
+        margin-bottom: 30px;
         &:focus{
             outline: none;
             font-size: 2em;
