--- a/client/src/components/album-collection/album-collection.styles.scss
+++ b/client/src/components/album-collection/album-collection.styles.scss
@@ -1,9 +1,10 @@
 .albumcollection{
     display: grid;
-    width: 100%;
-    border: 1px solid black;
+    width: 99%;
     grid-template-columns: 25% 25% 25% 25%;
     row-gap: 25px;
+    column-gap: .5%;
+
     @media screen and (max-width: 1115px){
         grid-template-columns: 33% 33% 33%;
     }
