--- a/client/src/components/footer/footer.styles.scss
+++ b/client/src/components/footer/footer.styles.scss
@@ -4,4 +4,8 @@
     color: #0d0d00;
     text-decoration: none;    
     opacity: 0.5;  
+
+    @media screen and (max-width: 460px){
+        margin-left: 20%;
+    }
 }
