--- a/client/src/components/album-card/album-card.styles.scss
+++ b/client/src/components/album-card/album-card.styles.scss
@@ -20,4 +20,17 @@
         position: relative;
         text-align: center;
     }
+
+    &:hover{
+        .albumcover{
+            opacity: 0.8;
+        }
+        box-shadow: 0 10px 25px rgba(235, 250, 100, 0.438);
+        transform: translateY(-8px);
+    }
+
+    &:active{
+        width: 98%;
+        height: 79%;
+    }
 }
